--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html>
 
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="voetbal" href="style.css">
         <title>Dit is een eenvoudige website</title>
     </head>
     
     <body>
         <main>
             <header>
-                <h1 id="hoofdtitel" class="belangrijk">De beste site van Nederland</h1>
+                <h1 id="voetbal1" class="belangrijk">Voetbal</h1>
             </header>
             
             <nav>
