--- a/voetbal.html
+++ b/voetbal.html
@@ -4,21 +4,21 @@
 
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title>Informatie over mij</title>
+        <title>voetbal</title>
         <meta charset="utf-8" />
     </head>
-    
+  
     <body>
         <main>
             <header>
-                <h1>Wil je meer van mij weten?</h1>
+                <h1>voetbal</h1>
                 <br>
             </header>
             
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a class="active" href="overmij.html">Over mij</a></li>
+                    <li><a class="active" href="index.html">Over mij</a></li>
                     <li><a href="info.html">Informatie</a></li>
                 </ul>
             </nav>
