--- a/betaalt-voetbal.html
+++ b/betaalt-voetbal.html
@@ -16,9 +16,11 @@
             
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="overmij.html">Over mij</a></li>
-                    <li><a class="active" href="info.html">Informatie</a></li>
+                    <li><a href="voetbal.html">voetbal</a></li>
+                    <li><a class="active" href="betaalt-voetbal.html">betaalt-voetbal</a></li>
+                    <li><a href="regels.html">regels</a></li>
+                    <li><a href="mijn-club.html">mijn club<a></li>
+                    <li><a href="Favorite-club">favorite club<a></li>
                 </ul>
             </nav>
             
