--- a/regels.html
+++ b/regels.html
@@ -17,9 +17,11 @@
             
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a class="active" href="index.html">Over mij</a></li>
-                    <li><a href="info.html">Informatie</a></li>
+                    <li><a href="voetbal.html">voetbal</a></li>
+                    <li><a href="betaalt-voetbal.html">betaalt-voetbal</a></li>
+                    <li><a class="active" href="regels.html">regels</a></li>
+                    <li><a href="mijn-club.html">mijn club</a></li>
+                    <li><a href="Favorite-club.html">favorite club</a></li>
                 </ul>
             </nav>
             
